test/simple/ill-typed/singletype_poly.caprice
(* TEST
  include refutable;
*)


(* This `t` argument is the same as (dependent t := a) *)
let f (type a b) (dependent t := a) (x : t) : b =
  x

